--- a/src/index.html
+++ b/src/index.html
@@ -97,43 +97,45 @@
                Органика — это целостная система производства по-настоящему чистой, натуральной и полезной продукции
             </p>
          </div>
-         <div class="offer__slider">
+         <div class="slider">
             <div class="swiper offerSwiper">
                <div class="swiper-wrapper">
-                  <div class="swiper-slide swiper-slide__milk">
+                  <div class="swiper-slide  swiper-slide_milk">
                      <div class="swiper-slide__overlay"></div>
                      <h3 class="swiper-slide__title">
                         Молочные продукты
                      </h3>
                      <div class="swiper-slide__box">
-                        <p class="swiper-slide__text">В наши дни появилась мода&nbsp;на здоровое питание, поэтому на
-                           рынке
+                        <p class="swiper-slide__text">В наши дни появилась мода на&nbsp;здоровое питание, поэтому
+                           на&nbsp;рынке
                            питания разработали органическое молоко. Органическое молоко является продуктом органического
                            животноводства
                         </p>
                         <a href="#" class="swiper-slide__link">Подробнее</a>
                      </div>
                   </div>
-                  <div class="swiper-slide swiper-slide__pasta">
+                  <div class="swiper-slide swiper-slide_pasta">
                      <div class="swiper-slide__overlay"></div>
                      <h3 class="swiper-slide__title">
                         Бакалея
                      </h3>
                      <div class="swiper-slide__box">
-                        <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на рынке
+                        <p class="swiper-slide__text">В наши дни появилась мода на&nbsp;здоровое питание, поэтому
+                           на&nbsp;рынке
                            питания разработали органическое молоко. Органическое молоко является продуктом органического
                            животноводства
                         </p>
                         <a href="#" class="swiper-slide__link">Подробнее</a>
                      </div>
                   </div>
-                  <div class="swiper-slide swiper-slide__meat">
+                  <div class="swiper-slide swiper-slide_meat">
                      <div class="swiper-slide__overlay"></div>
                      <h3 class="swiper-slide__title">
                         Мясо, птица
                      </h3>
                      <div class="swiper-slide__box">
-                        <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на рынке
+                        <p class="swiper-slide__text">В наши дни появилась мода на&nbsp;здоровое питание, поэтому
+                           на&nbsp;рынке
                            питания разработали органическое молоко. Органическое молоко является продуктом органического
                            животноводства
                         </p>
@@ -141,6 +143,137 @@
                      </div>
                   </div>
 
+               </div>
+               <div class="swiper-button-next">
+                  <svg width="10" height="18" viewBox="0 0 251 444" xmlns="http://www.w3.org/2000/svg">
+                     <g clip-path="url(#clip0_14_2)">
+                        <path
+                           d="M241.2 209.6L36.4 4.8C29.6 -1.7 18.8 -1.6 12.3 5.2C5.90002 11.8 5.90002 22.3 12.3 28.9L205 221.7L12.3 414.4C5.60002 421.1 5.60002 431.9 12.3 438.5C19 445.2 29.8 445.2 36.4 438.5L241.2 233.7C247.9 227.1 247.9 216.3 241.2 209.6Z"
+                           fill="#27300F" />
+                     </g>
+                     <defs>
+                        <clipPath id="clip0_14_2">
+                           <rect width="251" height="443.5" fill="white" />
+                        </clipPath>
+                     </defs>
+                  </svg>
+               </div>
+               <div class="swiper-button-prev">
+                  <svg width="10" height="18" viewBox="0 0 251 444" xmlns="http://www.w3.org/2000/svg">
+                     <g clip-path="url(#clip0_14_6)">
+                        <path
+                           d="M12.3 233.9L217.1 438.7C223.9 445.2 234.7 445.1 241.2 438.3C247.6 431.7 247.6 421.2 241.2 414.6L48.5 221.9L241.2 29.1C247.9 22.4 247.9 11.6 241.2 5.00001C234.5 -1.69999 223.7 -1.69999 217.1 5.00001L12.3 209.8C5.60002 216.5 5.60002 227.3 12.3 233.9Z"
+                           fill="#27300F" />
+                     </g>
+                     <defs>
+                        <clipPath id="clip0_14_6">
+                           <rect width="251" height="443.5" fill="white" />
+                        </clipPath>
+                     </defs>
+                  </svg>
+               </div>
+               <div class="swiper-pagination"></div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <section class="about">
+      <div class="container">
+         <h1 class="title title_block">
+            В чем наша
+            <span class="title__span">уникальность</span>
+         </h1>
+         <div class="about__box">
+            <div class="about__text">
+               <p class="description description_size-s">
+                  Мы полностью контролируем весь цикл производства – от поля до прилавка за счет собственной серьезной
+                  материальной и научной базы. Наш подход направлен на высокие технологии и достижения научного
+                  прогресса
+               </p>
+            </div>
+            <ul class="about__list">
+               <li class="about__item about__item_img1">Здоровье</li>
+               <li class="about__item about__item_img2">Традиции</li>
+               <li class="about__item about__item_img2">Вкус</li>
+            </ul>
+         </div>
+      </div>
+   </section>
+   <section class="trends">
+      <div class="container">
+         <h1 class="title">
+            Наши
+            <span class="title__span">новинки</span>
+         </h1>
+         <div class="trends__text">
+            <p class="description description_size-m">
+               Будь в тренде с современым миром, и будь здоров вместе с нами
+            </p>
+         </div>
+         <div class="slider">
+            <div class="swiper trendsSwiper">
+               <div class="swiper-wrapper">
+                  <div class="swiper-slide swiper-slide_height-l">
+                     <div class="swiper-slide__cover">
+                        <img src="images/catalog/milkCatalog.png" alt="milk" class="swiper-slide__img">
+                     </div>
+                     <h3 class="swiper-slide__title">
+                        Молоко топленое
+                     </h3>
+                     <p class="swiper-slide__description swiper-slide__description_size-m">Молоко Healthy food
+                        топленеое мдж 4% 500гр
+                     </p>
+                     <p class="swiper-slide__price">159 руб/шт</p>
+
+                     <div class="swiper-slide__footer">
+                        <div class="counter">
+                           <button class="counter__btn counter__btn_size-m counter__minus"></button>
+                           <input class="counter__input" type="text" value="0">
+                           <button class="counter__btn counter__btn_size-m counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_size-m">В корзину</a>
+                     </div>
+                  </div>
+                  <div class="swiper-slide swiper-slide_height-l">
+                     <div class="swiper-slide__cover">
+                        <img src="images/catalog/egg.png" alt="milk" class="swiper-slide__img">
+                     </div>
+                     <h3 class="swiper-slide__title">
+                        Яйцо перепелиное
+                     </h3>
+                     <p class="swiper-slide__description swiper-slide__description_size-m">QEGG Яйцо перепелиное
+                     </p>
+                     <p class="swiper-slide__price">94 руб/упак</p>
+
+                     <div class="swiper-slide__footer">
+                        <div class="counter">
+                           <button class="counter__btn counter__btn_size-m counter__minus"></button>
+                           <input class="counter__input" type="text" value="0">
+                           <button class="counter__btn counter__btn_size-m counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_size-m">В корзину</a>
+                     </div>
+                  </div>
+                  <div class="swiper-slide swiper-slide_height-l">
+                     <div class="swiper-slide__cover">
+                        <img src="images/catalog/chicken.png" alt="milk" class="swiper-slide__img">
+                     </div>
+                     <h3 class="swiper-slide__title">
+                        Куриное филе Оссобуко
+                     </h3>
+                     <p class="swiper-slide__description swiper-slide__description_size-m">Куриное филе Оссобуко
+                        (Ангус) охл скин. В вакумной упаковке
+                     </p>
+                     <p class="swiper-slide__price">1009 руб/кг</p>
+                     <div class="swiper-slide__footer">
+                        <div class="counter">
+                           <button class="counter__btn counter__btn_size-m counter__minus"></button>
+                           <input class="counter__input" type="text" value="0">
+                           <button class="counter__btn counter__btn_size-m counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_size-m">В корзину</a>
+                     </div>
+                  </div>
                </div>
                <div class="swiper-button-next">
                   <svg width="10" height="18" viewBox="0 0 251 444" xmlns="http://www.w3.org/2000/svg">
