--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
          <div class="slider">
             <div class="swiper offerSwiper">
                <div class="swiper-wrapper">
-                  <div class="swiper-slide  swiper-slide_milk">
+                  <div class="swiper-slide swiper-slide_height-m swiper-slide_milk">
                      <div class="swiper-slide__overlay"></div>
                      <h3 class="swiper-slide__title">
                         Молочные продукты
@@ -114,7 +114,7 @@
                         <a href="#" class="swiper-slide__link">Подробнее</a>
                      </div>
                   </div>
-                  <div class="swiper-slide swiper-slide_pasta">
+                  <div class="swiper-slide swiper-slide_height-m swiper-slide_pasta">
                      <div class="swiper-slide__overlay"></div>
                      <h3 class="swiper-slide__title">
                         Бакалея
@@ -128,7 +128,7 @@
                         <a href="#" class="swiper-slide__link">Подробнее</a>
                      </div>
                   </div>
-                  <div class="swiper-slide swiper-slide_meat">
+                  <div class="swiper-slide swiper-slide_height-m swiper-slide_meat">
                      <div class="swiper-slide__overlay"></div>
                      <h3 class="swiper-slide__title">
                         Мясо, птица
@@ -192,9 +192,9 @@
                </p>
             </div>
             <ul class="about__list">
-               <li class="about__item about__item_img1">Здоровье</li>
-               <li class="about__item about__item_img2">Традиции</li>
-               <li class="about__item about__item_img2">Вкус</li>
+               <li class="about__item">Здоровье</li>
+               <li class="about__item">Традиции</li>
+               <li class="about__item">Вкус</li>
             </ul>
          </div>
       </div>
@@ -241,7 +241,7 @@
                      <h3 class="swiper-slide__title">
                         Яйцо перепелиное
                      </h3>
-                     <p class="swiper-slide__description swiper-slide__description_size-m">QEGG Яйцо перепелиное
+                     <p class="swiper-slide__description swiper-slide__description_size-m">QEGG Яйцо перепелиное 20шт
                      </p>
                      <p class="swiper-slide__price">94 руб/упак</p>
 
@@ -256,7 +256,7 @@
                   </div>
                   <div class="swiper-slide swiper-slide_height-l">
                      <div class="swiper-slide__cover">
-                        <img src="images/catalog/chicken.png" alt="milk" class="swiper-slide__img">
+                        <img src="images/catalog/chicken.jpg" alt="milk" class="swiper-slide__img">
                      </div>
                      <h3 class="swiper-slide__title">
                         Куриное филе Оссобуко
@@ -308,6 +308,336 @@
          </div>
       </div>
    </section>
+   <main class="catalog">
+      <div class="container">
+         <h1 class="title">
+            Каталог
+         </h1>
+         <div class="catalog__text">
+            <p class="description description_size-m">
+               Еда которая заботиться о вашей фигуре
+            </p>
+         </div>
+         <ul class="catalog__list">
+            <li class="catalog__item">
+               <a href="#" class="catalog__link">Молочные продукты</a>
+            </li>
+            <li class="catalog__item">
+               <a href="#" class="catalog__link">Бакалея</a>
+            </li>
+            <li class="catalog__item">
+               <a href="#" class="catalog__link">Мясо, птица</a>
+            </li>
+            <li class="catalog__item">
+               <a href="#" class="catalog__link">Детям</a>
+            </li>
+            <li class="catalog__item">
+               <a href="#" class="catalog__link">Овощи и фрукты</a>
+            </li>
+         </ul>
+         <div class="catalog-grid">
+            <div class="catalog-grid__product">
+               <div class="catalog-grid__cover">
+                  <img src="images/catalog/milkCatalog.png" alt="milk" class="catalog-grid__img">
+               </div>
+               <h3 class="catalog-grid__title">
+                  Молоко топленое
+               </h3>
+               <p class="catalog-grid__description">Молоко Healthy food топленеое
+                  мдж 4% 500гр
+               </p>
+               <p class="catalog-grid__price">159 руб/шт</p>
+               <div class="catalog-grid__footer">
+                  <div class="counter">
+                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <input class=" counter__input counter__input_min" type="text" value="0">
+                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                  </div>
+                  <a href="#" class="link link_size-s">В корзину</a>
+               </div>
+            </div>
+            <div class="catalog-grid__product">
+               <div class="catalog-grid__cover">
+                  <img src="images/catalog/yogurt1.jpg" alt="yogurt" class="catalog-grid__img">
+               </div>
+               <h3 class="catalog-grid__title">
+                  Йогурт с черникой
+               </h3>
+               <p class="catalog-grid__description catalog-grid__description_size-s">Йогурт Healthy food с
+                  черникой,
+                  питьевой 1,5%, 750 г
+               </p>
+               <p class="catalog-grid__price">89 руб/шт</p>
+               <div class="catalog-grid__footer">
+                  <div class="counter">
+                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <input class=" counter__input counter__input_min" type="text" value="0">
+                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                  </div>
+                  <a href="#" class="link link_size-s">В корзину</a>
+               </div>
+            </div>
+            <div class="catalog-grid__product">
+               <div class="catalog-grid__cover">
+                  <img src="images/catalog/curd.jpg" alt="curd" class="catalog-grid__img">
+               </div>
+               <h3 class="catalog-grid__title">
+                  Творог
+               </h3>
+               <p class="catalog-grid__description catalog-grid__description_size-s">Творог Healthy food
+                  Рассыпчатый
+                  9% 350 г
+               </p>
+               <p class="catalog-grid__price">216 руб/шт</p>
+               <div class="catalog-grid__footer">
+                  <div class="counter">
+                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <input class=" counter__input counter__input_min" type="text" value="0">
+                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                  </div>
+                  <a href="#" class="link link_size-s">В корзину</a>
+               </div>
+            </div>
+            <div class="catalog-grid__product">
+               <div class="catalog-grid__cover">
+                  <img src="images/catalog/mozzarella.png" alt="mozzarella" class="catalog-grid__img">
+               </div>
+               <h3 class="catalog-grid__title">
+                  Моцарелла
+               </h3>
+               <p class="catalog-grid__description catalog-grid__description_size-s">Моцарелла Healthy food 45%,
+                  0.125 кг
+               </p>
+               <p class="catalog-grid__price">359 руб/шт</p>
+               <div class="catalog-grid__footer">
+                  <div class="counter">
+                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <input class=" counter__input counter__input_min" type="text" value="0">
+                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                  </div>
+                  <a href="#" class="link link_size-s">В корзину</a>
+               </div>
+            </div>
+            <div class="catalog-grid__product">
+               <div class="catalog-grid__cover">
+                  <img src="images/catalog/butter.jpg" alt="butter" class="catalog-grid__img">
+               </div>
+               <h3 class="catalog-grid__title">
+                  Масло сливочное
+               </h3>
+               <p class="catalog-grid__description catalog-grid__description_size-s">Масло Healthy food сливочное
+                  82,5%, 200г
+               </p>
+               <p class="catalog-grid__price">139 руб/шт</p>
+               <div class="catalog-grid__footer">
+                  <div class="counter">
+                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <input class=" counter__input counter__input_min" type="text" value="0">
+                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                  </div>
+                  <a href="#" class="link link_size-s">В корзину</a>
+               </div>
+            </div>
+            <div class="catalog-grid__product">
+               <div class="catalog-grid__cover">
+                  <img src="images/catalog/yogurt2.png" alt="yogurt" class="catalog-grid__img">
+               </div>
+               <h3 class="catalog-grid__title">
+                  Йогурт термостатный
+               </h3>
+               <p class="catalog-grid__description catalog-grid__description_size-s">Йогурт Healthy food
+                  термостатный
+                  с фруктово-ягодным 2,5 %, 165 г
+               </p>
+               <p class="catalog-grid__price">159 руб/шт</p>
+               <div class="catalog-grid__footer">
+                  <div class="counter">
+                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <input class=" counter__input counter__input_min" type="text" value="0">
+                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                  </div>
+                  <a href="#" class="link link_size-s">В корзину</a>
+               </div>
+            </div>
+            <div class="catalog-grid__product">
+               <div class="catalog-grid__cover">
+                  <img src="images/catalog/cheese.jpg" alt="cheese" class="catalog-grid__img">
+               </div>
+               <h3 class="catalog-grid__title">
+                  Сыр
+               </h3>
+               <p class="catalog-grid__description catalog-grid__description_size-s">Сыр Healthy food Сливочный
+                  45%
+                  200г
+               </p>
+               <p class="catalog-grid__price">559 руб/шт</p>
+               <div class="catalog-grid__footer">
+                  <div class="counter">
+                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <input class=" counter__input counter__input_min" type="text" value="0">
+                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                  </div>
+                  <a href="#" class="link link_size-s">В корзину</a>
+               </div>
+            </div>
+            <div class="catalog-grid__product">
+               <div class="catalog-grid__cover">
+                  <img src="images/catalog/sauce.png" alt="sauce" class="catalog-grid__img">
+               </div>
+               <h3 class="catalog-grid__title">
+                  Соус для салата
+               </h3>
+               <p class="catalog-grid__description catalog-grid__description_size-s">Соус для салата Healthy food
+                  пикантыный 4% 70гр
+               </p>
+               <p class="catalog-grid__price">59 руб/шт</p>
+               <div class="catalog-grid__footer">
+                  <div class="counter">
+                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <input class=" counter__input counter__input_min" type="text" value="0">
+                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                  </div>
+                  <a href="#" class="link link_size-s">В корзину</a>
+               </div>
+            </div>
+         </div>
+         <button class="catalog__load">загрузить еще</button>
+      </div>
+   </main>
+   <section class="services">
+      <div class="container">
+         <h1 class="title">
+            Доставка и
+            <span class="title__span">оплата</span>
+         </h1>
+         <div class="services-flex">
+            <div class="services-flex__delivery">
+               <p class="services-flex__text">
+                  Мы доставляем ваши заказы курьером в специально оборудованном транспорте.
+               </p>
+               <p class="services-flex__text">
+
+                  Компания Healthly food предлагает самые удобные и быстрые способы доставки по всей стране. Посмотреть
+                  подробные условия и географию
+                  вы можете по этой <a href="#" class="services-flex__link">ссылке</a>
+               </p>
+            </div>
+            <div class="services-flex__pay">
+               <p class="services-flex__text">
+                  Вы можете оплатить заказ наличными или картой курьеру, либо&nbsp;воспользоваться функцией
+                  онлайн-оплаты и
+                  получить <span class="services-flex__text color">скидку 5%.</span>
+               </p>
+               <ul class="services-flex__list">
+                  <li class="services-flex__item"></li>
+                  <li class="services-flex__item"></li>
+                  <li class="services-flex__item"></li>
+               </ul>
+            </div>
+         </div>
+      </div>
+   </section>
+   <div class="footer">
+      <section class="contact">
+         <div class="container">
+            <div class="contact-box">
+               <div class="contact-box__connection">
+                  <h1 class="title title_block">
+                     Не смогли
+                     <span class="title__span">определиться?</span>
+                  </h1>
+                  <div class="contact-box__text">
+                     <p class="description description_size-s">
+                        Если у вас остались вопросы, вы можете задать отправить нам ваши данные. Наши менеджеры свяжутся
+                        с
+                        вами в течении рабочего дня.
+                     </p>
+                     <ul class="contact-box__list">
+                        <li class="contact-box__item">
+                           <a href="tel:+79453425555" class="contact-box__info">+7 945 342 55 55</a>
+                        </li>
+                        <li class="contact-box__item">
+                           <a href="mailto:healthlyfood@mail.ru" class="contact-box__info">healthlyfood@mail.ru</a>
+                        </li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="contact-box__form">
+                  <div class="card">
+                     <h3 class="card__title">Свяжитесь с нами</h3>
+                     <form>
+                        <label class="card__label">Ваше имя</label>
+                        <input class="card__input" type="text" placeholder="Ваше имя">
+                        <label class="card__label">Ваш телефон</label>
+                        <input class="card__input" type="tel" placeholder="Ваш телефон">
+                        <button class="link card__link" type="submit">заказать звонок</button>
+                        <p class="card__check">Нажимая на кнопку вы подтверждаете свое согласие на обработку <a href="#"
+                              class="card__doc">персональных данных.</a></p>
+                     </form>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <footer>
+         <div class="container">
+            <div class="footer__box">
+               <div class="footer__wrapper1">
+                  <a href="#" class="logo logo_max"></a>
+                  <ul class="footer__list">
+                     <li class="footer__item">
+                        <a href="#" class="footer__link">Наша продукция</a>
+                     </li>
+                     <li class="footer__item">
+                        <a href="#" class="footer__link">Новинки</a>
+                     </li>
+                     <li class="footer__item">
+                        <a href="#" class="footer__link">Доставка</a>
+                     </li>
+                  </ul>
+               </div>
+               <div class="footer__wrapper2">
+                  <ul class="footer__list">
+                     <li class="footer__item">
+                        Москва , ул.&nbsp;Ленинградская&nbsp;64
+                     </li>
+                     <li class="footer__item">
+                        пн-пт с&nbsp;09:00 до&nbsp;21:00
+                     </li>
+                     <li class="footer__item">
+                        сб-вс с&nbsp;09:00 до&nbsp;19:00
+                     </li>
+                  </ul>
+                  <div class="footer__contact">
+                     <a href="tel:+79453425555" class="footer__tel">+7 945 342 55 55</a>
+                     <a href="mailto:healthlyfood@mail.ru" class="footer__tel">e-mail: healthlyfood@mail.ru</a>
+                     <ul class="footer-social">
+                        <li class="footer-social__item">
+                           <a href="#" target="_blank" class="footer-social__link footer-social__vk"></a>
+                        </li>
+                        <li class="footer-social__item">
+                           <a href="#" target="_blank" class="footer-social__link footer-social__inst"></a>
+                        </li>
+                        <li class="footer-social__item">
+                           <a href="#" target="_blank" class="footer-social__link footer-social__fb"></a>
+                        </li>
+                     </ul>
+                  </div>
+               </div>
+
+            </div>
+            <div class="footer__text">
+               <p class="footer__copy">
+                  &copy; 2020, Все права защищены
+               </p>
+               <p class="footer__author">
+                  Сделано в рамках курса учебной платформы <a href="#" class="footer__course">Frontend Blok</a>
+               </p>
+            </div>
+         </div>
+      </footer>
+   </div>
+
 </body>
 
 </html>
