--- a/src/index.html
+++ b/src/index.html
@@ -13,37 +13,42 @@
       <header>
          <div class="container">
             <div class="header">
-               <div class="header__wrapper1">
-                  <a href="#" class="logo"></a>
-                  <nav>
-                     <ul class="header__nav">
-                        <li class="header__item">
-                           <a href="#" class="header__link">Наша продукция</a>
-                        </li>
-                        <li class="header__item">
-                           <a href="#" class="header__link">О компании</a>
-                        </li>
-                        <li class="header__item">
-                           <a href="#" class="header__link">Новинки</a>
-                        </li>
-                        <li class="header__item">
-                           <a href="#" class="header__link">Каталог</a>
-                        </li>
-                        <li class="header__item">
-                           <a href="#" class="header__link">Доставка</a>
-                        </li>
-                        <li class="header__item">
-                           <a href="#" class="header__link">Контакты</a>
-                        </li>
-                     </ul>
-                  </nav>
-               </div>
-               <div class="header__wrapper2">
-                  <a href="tel:+79453425555" class="header__tel">+7 945 342 55 55</a>
+               <!-- <div class="header__wrapper1"> -->
+               <a href="#" class="logo"></a>
+               <nav class="header__navigation">
+                  <ul class="header__nav">
+                     <li class="header__item">
+                        <a href="#" class="header__link">Наша продукция</a>
+                     </li>
+                     <li class="header__item">
+                        <a href="#" class="header__link">О компании</a>
+                     </li>
+                     <li class="header__item">
+                        <a href="#" class="header__link">Новинки</a>
+                     </li>
+                     <li class="header__item">
+                        <a href="#" class="header__link">Каталог</a>
+                     </li>
+                     <li class="header__item">
+                        <a href="#" class="header__link">Доставка</a>
+                     </li>
+                     <li class="header__item">
+                        <a href="#" class="header__link">Контакты</a>
+                     </li>
+                  </ul>
+               </nav>
+               <!-- </div> -->
+               <!-- <div class="header__wrapper2"> -->
+               <a href="tel:+79453425555" class="header__tel">+7 945 342 55 55</a>
+               <div class="header__buttons">
+                  <a href="tel:+79453425555" class="header__phone"></a>
+                  <button href="#" class="header__menu"></button>
                   <button href="#" class="header__cart">
                      <span class="header__counter">0</span>
                   </button>
                </div>
+
+               <!-- </div> -->
             </div>
          </div>
       </header>
@@ -59,6 +64,7 @@
                      Сеть магазинов полезных продуктов питания, производство которых основано на&nbsp;принципах и
                      стандартах органического чистых продуктов
                   </p>
+                  <img class="main__imgmobi" src="images/plate.png" alt="Салат">
                   <div class="main__link">
                      <a href="#" class="link">Перейти в каталог</a>
                   </div>
@@ -92,7 +98,7 @@
             Что мы
             <span class="title__span">предлагаем</span>
          </h1>
-         <div class="offer__text">
+         <div class="offer__text text-media">
             <p class="description description_size-m">
                Органика — это целостная система производства по-настоящему чистой, натуральной и полезной продукции
             </p>
@@ -184,7 +190,7 @@
             <span class="title__span">уникальность</span>
          </h1>
          <div class="about__box">
-            <div class="about__text">
+            <div class="about__text text-media">
                <p class="description description_size-s">
                   Мы полностью контролируем весь цикл производства – от поля до прилавка за счет собственной серьезной
                   материальной и научной базы. Наш подход направлен на высокие технологии и достижения научного
@@ -205,7 +211,7 @@
             Наши
             <span class="title__span">новинки</span>
          </h1>
-         <div class="trends__text">
+         <div class="trends__text text-media">
             <p class="description description_size-m">
                Будь в тренде с современым миром, и будь здоров вместе с нами
             </p>
@@ -313,11 +319,13 @@
          <h1 class="title">
             Каталог
          </h1>
-         <div class="catalog__text">
+         <div class="catalog__text text-media">
             <p class="description description_size-m">
                Еда которая заботиться о вашей фигуре
             </p>
          </div>
+      </div>
+      <div class="catalog__container">
          <ul class="catalog__list">
             <li class="catalog__item">
                <a href="#" class="catalog__link">Молочные продукты</a>
@@ -335,6 +343,9 @@
                <a href="#" class="catalog__link">Овощи и фрукты</a>
             </li>
          </ul>
+      </div>
+
+      <div class="container">
          <div class="catalog-grid">
             <div class="catalog-grid__product">
                <div class="catalog-grid__cover">
@@ -343,15 +354,14 @@
                <h3 class="catalog-grid__title">
                   Молоко топленое
                </h3>
-               <p class="catalog-grid__description">Молоко Healthy food топленеое
-                  мдж 4% 500гр
+               <p class="catalog-grid__description">Молоко Healthy food&nbsp;топленеое мдж&nbsp;4%&nbsp;500гр
                </p>
                <p class="catalog-grid__price">159 руб/шт</p>
                <div class="catalog-grid__footer">
                   <div class="counter">
-                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <button class="counter__btn counter__btn_min  counter__minus"></button>
                      <input class=" counter__input counter__input_min" type="text" value="0">
-                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                     <button class="counter__btn counter__btn_min counter__plus"></button>
                   </div>
                   <a href="#" class="link link_size-s">В корзину</a>
                </div>
@@ -370,9 +380,9 @@
                <p class="catalog-grid__price">89 руб/шт</p>
                <div class="catalog-grid__footer">
                   <div class="counter">
-                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <button class="counter__btn counter__btn_min  counter__minus"></button>
                      <input class=" counter__input counter__input_min" type="text" value="0">
-                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                     <button class="counter__btn counter__btn_min counter__plus"></button>
                   </div>
                   <a href="#" class="link link_size-s">В корзину</a>
                </div>
@@ -386,14 +396,14 @@
                </h3>
                <p class="catalog-grid__description catalog-grid__description_size-s">Творог Healthy food
                   Рассыпчатый
-                  9% 350 г
+                  9%&nbsp;350&nbsp;г
                </p>
                <p class="catalog-grid__price">216 руб/шт</p>
                <div class="catalog-grid__footer">
                   <div class="counter">
-                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <button class="counter__btn counter__btn_min  counter__minus"></button>
                      <input class=" counter__input counter__input_min" type="text" value="0">
-                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                     <button class="counter__btn counter__btn_min counter__plus"></button>
                   </div>
                   <a href="#" class="link link_size-s">В корзину</a>
                </div>
@@ -405,15 +415,15 @@
                <h3 class="catalog-grid__title">
                   Моцарелла
                </h3>
-               <p class="catalog-grid__description catalog-grid__description_size-s">Моцарелла Healthy food 45%,
-                  0.125 кг
+               <p class="catalog-grid__description catalog-grid__description_size-s">Моцарелла Healthy&nbsp;food
+                  45%,&nbsp;0.125&nbsp;кг
                </p>
                <p class="catalog-grid__price">359 руб/шт</p>
                <div class="catalog-grid__footer">
                   <div class="counter">
-                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <button class="counter__btn counter__btn_min  counter__minus"></button>
                      <input class=" counter__input counter__input_min" type="text" value="0">
-                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                     <button class="counter__btn counter__btn_min counter__plus"></button>
                   </div>
                   <a href="#" class="link link_size-s">В корзину</a>
                </div>
@@ -431,9 +441,9 @@
                <p class="catalog-grid__price">139 руб/шт</p>
                <div class="catalog-grid__footer">
                   <div class="counter">
-                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <button class="counter__btn counter__btn_min  counter__minus"></button>
                      <input class=" counter__input counter__input_min" type="text" value="0">
-                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                     <button class="counter__btn counter__btn_min counter__plus"></button>
                   </div>
                   <a href="#" class="link link_size-s">В корзину</a>
                </div>
@@ -452,9 +462,9 @@
                <p class="catalog-grid__price">159 руб/шт</p>
                <div class="catalog-grid__footer">
                   <div class="counter">
-                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <button class="counter__btn counter__btn_min  counter__minus"></button>
                      <input class=" counter__input counter__input_min" type="text" value="0">
-                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                     <button class="counter__btn counter__btn_min counter__plus"></button>
                   </div>
                   <a href="#" class="link link_size-s">В корзину</a>
                </div>
@@ -473,9 +483,9 @@
                <p class="catalog-grid__price">559 руб/шт</p>
                <div class="catalog-grid__footer">
                   <div class="counter">
-                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <button class="counter__btn counter__btn_min  counter__minus"></button>
                      <input class=" counter__input counter__input_min" type="text" value="0">
-                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                     <button class="counter__btn counter__btn_min counter__plus"></button>
                   </div>
                   <a href="#" class="link link_size-s">В корзину</a>
                </div>
@@ -493,9 +503,9 @@
                <p class="catalog-grid__price">59 руб/шт</p>
                <div class="catalog-grid__footer">
                   <div class="counter">
-                     <button class="counter__btn counter__minus counter__minus_min"></button>
+                     <button class="counter__btn counter__btn_min  counter__minus"></button>
                      <input class=" counter__input counter__input_min" type="text" value="0">
-                     <button class="counter__btn counter__plus counter__plus_min"></button>
+                     <button class="counter__btn counter__btn_min counter__plus"></button>
                   </div>
                   <a href="#" class="link link_size-s">В корзину</a>
                </div>
@@ -525,8 +535,7 @@
             <div class="services-flex__pay">
                <p class="services-flex__text">
                   Вы можете оплатить заказ наличными или картой курьеру, либо&nbsp;воспользоваться функцией
-                  онлайн-оплаты и
-                  получить <span class="services-flex__text color">скидку 5%.</span>
+                  онлайн-оплаты и получить <span class="services-flex__text color">скидку&nbsp;5%.</span>
                </p>
                <ul class="services-flex__list">
                   <li class="services-flex__item"></li>
@@ -546,8 +555,8 @@
                      Не смогли
                      <span class="title__span">определиться?</span>
                   </h1>
-                  <div class="contact-box__text">
-                     <p class="description description_size-s">
+                  <div class="contact-box__text text-media">
+                     <p class="description description_size-s contact-box__description">
                         Если у вас остались вопросы, вы можете задать отправить нам ваши данные. Наши менеджеры свяжутся
                         с
                         вами в течении рабочего дня.
@@ -565,7 +574,7 @@
                <div class="contact-box__form">
                   <div class="card">
                      <h3 class="card__title">Свяжитесь с нами</h3>
-                     <form>
+                     <form class="card__form">
                         <label class="card__label">Ваше имя</label>
                         <input class="card__input" type="text" placeholder="Ваше имя">
                         <label class="card__label">Ваш телефон</label>
