--- a/src/index.html
+++ b/src/index.html
@@ -213,7 +213,7 @@
          </h1>
          <div class="trends__text text-media">
             <p class="description description_size-m">
-               Будь в тренде с современым миром, и будь здоров вместе с нами
+               Будь в тренде с современым миром, и будь здоров вместе с&nbsp;нами
             </p>
          </div>
          <div class="slider">
